fix: layout issues

--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -33,4 +33,8 @@
         @apply text-transparent bg-clip-text bg-gradient-to-r from-indigo-800 to-indigo-500
     }
 
+    button {
+        @apply flex justify-center;
+    }
+
 }
